--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="How to buy bitcoin in Germany">
+    <meta name="keywords" content="Bitcoin, bitcoin in germany, crypto, crypto in germany, ether, ethereum">
+    <meta name="author" content="Muhammad Ahsan">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>How to Buy Bitcoin in Germany</title>
