--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+    <style>.white {color: #099cc3 !important;}</style>
   </head>
   <body>
 
@@ -50,8 +51,8 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#wallet">
-                  Crypto Wallets
+                <a class="nav-link" href="bisonapp.html">
+                  Buy using Bison app
                 </a>
               </li>
               <li class="nav-item">
@@ -315,7 +316,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-3 col-xs-12">
             <div class="footer-logo">
-            <h3>Bitcoin In Germany</h3>  
+              <h3 class="white">Bitcoin In Germany</h3>  
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-xs-12">     
